name:                google-maps
version:             0.1.0.0
synopsis:            Library for interfacing with the Google Maps webservices
description:         Haskell lcient for the Google Maps webservices
license:             MIT
license-file:        LICENSE
author:              Joel Hermanns
maintainer:          joel.hermanns@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type:     git
  location: https://github.com/jhedev/google-maps

library
  exposed-modules:      Web.Google.Maps
                      , Web.Google.Maps.Types
                      , Web.Google.Maps.Geocode
                      , Web.Google.Maps.DistanceMatrix
                      , Web.Google.Maps.Internal
                      , Web.Google.Maps.Util
  default-extensions:   OverloadedStrings
                      , TemplateHaskell
  build-depends:        base         >= 4.5   && < 5
                      , url          >= 2.1   && < 2.2
                      , http-conduit >= 2.1   && < 2.2
                      , resourcet    >= 1.1   && < 1.2
                      , aeson        >= 0.8   && < 0.9
                      , transformers >= 0.3   && < 0.5
                      , text         >= 1.1   && < 1.2
                      , matrix
                      , vector       >= 0.10  && < 0.11
  default-language:     Haskell2010
  ghc-options:	        -Wall