name:                google-maps
version:             0.1.0.0
synopsis:            Library for interfacing with the Google Maps webservices
description:         Haskell lcient for the Google Maps webservices
license:             MIT
license-file:        LICENSE
author:              Joel Hermanns
maintainer:          joel.hermanns@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type:     git
  location: https://github.com/jhedev/google-maps

library
  exposed-modules:      Web.Google.Maps

                      , Web.Google.Maps.Types
                      , Web.Google.Maps.Services.DistanceMatrix
                      , Web.Google.Maps.Services.Geocode

                      , Web.Google.Maps.Internal
                      , Web.Google.Maps.Util

  default-extensions:   OverloadedStrings
                      , TemplateHaskell
  build-depends:        base         >= 4.5   && < 5
                      , url          >= 2.1
                      , http-conduit >= 2.1
                      , resourcet    >= 1.1
                      , aeson        >= 0.8
                      , transformers >= 0.3
                      , mtl          >= 2.2
                      , text         >= 1.1
                      , matrix       >= 0.3
                      , vector       >= 0.10
  default-language:     Haskell2010
  ghc-options:	        -Wall