name:                google-maps
version:             0.1.0.0
synopsis:            Library for interfacing with the Google Maps webservices
description:         Haskell lcient for the Google Maps webservices
license:             MIT
license-file:        LICENSE
author:              Joel Hermanns
maintainer:          joel.hermanns@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type:     git
  location: https://github.com/jhedev/google-maps

library
  hs-source-dirs:     src
  exposed-modules:      Web.Google.Maps

                      , Web.Google.Maps.Types
                      , Web.Google.Maps.Services.DistanceMatrix
                      , Web.Google.Maps.Services.Geocode

                      , Web.Google.Maps.Internal
                      , Web.Google.Maps.Util

  build-depends:        aeson        >= 0.8
                      , base         >= 4.5   && < 5
                      , bytestring
                      , http-client
                      , http-client-tls
                      , matrix       >= 0.3
                      , mtl          >= 2.1
                      , resourcet    >= 1.1
                      , text         >= 1.1
                      , transformers >= 0.3
                      , vector       >= 0.10
  default-language:     Haskell2010
  ghc-options:	        -Wall


test-suite google-maps-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      Test.Geocode
                      Test.GeocodeData
  hs-source-dirs:     test
  default-language:   Haskell2010
  build-depends:      google-maps -any
                    , base
                    , bytestring
                    , aeson
                    , hspec
                    , raw-strings-qq < 1.2